HelloUltraviolet/Fixtures/RejectedSource/Expressions/UnionDirectAccess/Expected.uv
//! Expected diagnostic metadata for the UnionDirectAccess rejected-source specimen.

expectedDiagnostic("E-TYP-2202", "rule.16.Union-DirectAccess-Err")
